crates/next-custom-transforms/tests/errors/strip-page-exports/server-side-after-static-props/input.js
export const getStaticProps = async () => {}
export { a as getServerSideProps }
